frontend/tests/errors/ER-006/i8_overflow/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Literal overflow: Integer or float literals that exceed type range are compile-time errors | Literal overflow: i8 value exceeds range


&^main() -> #i32 {
    value:#i8 = 128;
    0;
}
